Update Danu Akhir

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 VITE_SUPABASE_URL="https://ljggxfyxyzhjwuokrznz.supabase.co"
 VITE_SUPABASE_ANON_KEY="sb_publishable_aQew3RF_9YsCiBM9JiaNuA_IdBz3kJo"
-VITE_BACKEND_URL=http://localhost:5000
+PORT=5000
+GEMINI_API_KEY=AIzaSyAJbSAYt7HRfChDrAvKdgCwED_gn4KAe4A
+FRONTEND_URL=http://localhost:5173
