Test Deploy Chatbot

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VITE_SUPABASE_URL="https://ljggxfyxyzhjwuokrznz.supabase.co"
 VITE_SUPABASE_ANON_KEY="sb_publishable_aQew3RF_9YsCiBM9JiaNuA_IdBz3kJo"
-VITE_BACKEND_URL=http://localhost:5000
+VITE_BACKEND_URL=https://vercel.com/renhakudos-projects/backend-techcomfest/5YSuGwrw7FDEnw9BfUKWaZ6jpAMN
 GEMINI_API_KEY=AIzaSyAQ5sfWg6cMrcmzmqpHwhQdhRUAN87HKEE
 
