--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
 VITE_SUPABASE_URL="https://ljggxfyxyzhjwuokrznz.supabase.co"
 VITE_SUPABASE_ANON_KEY="sb_publishable_aQew3RF_9YsCiBM9JiaNuA_IdBz3kJo"
-VITE_BACKEND_URL=https://backend-techcomfest.vercel.app
-GEMINI_API_KEY=AIzaSyAQ5sfWg6cMrcmzmqpHwhQdhRUAN87HKEE
+VITE_BACKEND_URL=http://localhost:5000
 
